Fix text size on mobile.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -20,6 +20,7 @@ body {
     font-family: "Droid Sans", sans-serif;
     padding: 48px;
     padding-top: 0;
+    -webkit-text-size-adjust: 100%;
 }
 
 a {
